welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: not found: type Boulean
var vuBiscuit:Boulean=false
              ^