welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code

var vuBiscuit:Boulean=false

def haveBaggle():Boolean = {
  avance()
  if (vuBiscuit== true) {
    return true
  }
  else{
    return false
  }
}